[package]
name = "hostexec"
version = "0.1.0"
authors = ["Jonathan Lebon <jonathan@jlebon.com>"]
license = "MIT OR Apache-2.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
nix = { version = "0.29", features = ["socket", "process", "signal", "term", "uio", "user"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shlex = "1"
tempfile = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
